Gap Related Issues Fix

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
     display: inline-flex;
     padding: 15px 35px;
     align-items: flex-start;
-    gap: 10px;
+    gap: 20px;
     border-style: none;
     cursor: pointer;
 }
@@ -192,6 +192,7 @@
 .social-media-container {
     display: flex;
     justify-content: space-around;
+    gap: 20px;
 }
 
 .social-media-img {
